button alignment fixed

--- a/frontend/src/pages/ProductPage.css
+++ b/frontend/src/pages/ProductPage.css
@@ -77,6 +77,7 @@
 .product-qty-cart-row {
   display: flex;
   align-items: center;
+  justify-content: left;
   gap: 24px;
   width: 100%;
 }
@@ -232,7 +233,7 @@ details[open] .details-summary {
 
 .product-extra-details {
   width: 100%;
-  margin-bottom: 32px;
+  margin-bottom: 24px;
 }
 
 .product-snapmint-row {
@@ -245,6 +246,8 @@ details[open] .details-summary {
   display: flex;
   gap: 16px;
   margin-bottom: 8px;
+  justify-content: left !important;
+  margin-top: 9px;
 }
 
 .product-size-btn {
